<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Activity_Main">

    <ImageView
        android:id="@+id/companyLogo"
        android:src="@drawable/main_jgwlogo"
        android:contentDescription="@string/aboutjgw_logodescrip"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/companyName"
        android:text="@string/jgwines_initial"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/companyLogo"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/subtitle"
        android:text="@string/jgwinesSub_initial"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/companyName"
        android:layout_centerInParent="true"
        android:layout_marginBottom="60dp"
        />

    <Button
        android:id="@+id/enterPortfolio"
        android:text="@string/viewPortfolio_initial"
        android:textColor="@color/backgroundColor"
        android:background="@color/mainUnselectedButtonBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/subtitle"
        />
</RelativeLayout>
